--- a/Football-League/Scenes/Team Info/TeamInfoVC.xib
+++ b/Football-League/Scenes/Team Info/TeamInfoVC.xib
@@ -1,22 +1,112 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeamInfoVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeamInfoVC" customModule="Football_League" customModuleProvider="target">
             <connections>
+                <outlet property="noPlayerFoundPlaceHolderLable" destination="4qd-3L-w02" id="ckc-Bi-UmY"/>
+                <outlet property="playersTableView" destination="hly-lF-ekN" id="EwU-7T-m7D"/>
+                <outlet property="teamAvatarImage" destination="wr1-eH-fuQ" id="Ozr-Il-mZ7"/>
+                <outlet property="teamNameLable" destination="uii-wK-8no" id="h10-XB-YWW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uii-wK-8no">
+                    <rect key="frame" x="169" y="71" width="76" height="22"/>
+                    <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                    <color key="textColor" name="appMainFountColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zsv-Jr-RjL">
+                    <rect key="frame" x="20" y="71" width="25" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="zsv-Jr-RjL" secondAttribute="height" id="Yxr-0R-gBf"/>
+                        <constraint firstAttribute="width" constant="25" id="m0W-nX-OOI"/>
+                    </constraints>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" image="exite"/>
+                    <connections>
+                        <action selector="didTapDismissBtn:" destination="-1" eventType="touchUpInside" id="K2e-gv-Wi5"/>
+                    </connections>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wr1-eH-fuQ">
+                    <rect key="frame" x="169.5" y="109" width="75" height="75"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="75" id="hbb-Vk-iNl"/>
+                        <constraint firstAttribute="width" secondItem="wr1-eH-fuQ" secondAttribute="height" multiplier="1:1" id="j8B-hg-O0u"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" players’ names" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pq9-zn-slE">
+                    <rect key="frame" x="20" y="250" width="374" height="32"/>
+                    <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
+                    <color key="textColor" name="appMainFountColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Jm-M0-O5a">
+                    <rect key="frame" x="137.5" y="200" width="139" height="34"/>
+                    <state key="normal" title="Visit Our Website">
+                        <color key="titleColor" name="AccentColor"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapShowTeamWebsiteBtn:" destination="-1" eventType="touchUpInside" id="PGb-Cu-l5V"/>
+                    </connections>
+                </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hly-lF-ekN">
+                    <rect key="frame" x="0.0" y="292" width="414" height="604"/>
+                    <color key="backgroundColor" name="appBGColor"/>
+                </tableView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Player's Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qd-3L-w02">
+                    <rect key="frame" x="120" y="593" width="207" height="43.5"/>
+                    <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="27"/>
+                    <color key="textColor" name="appMainFountColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="appBGColor"/>
+            <constraints>
+                <constraint firstItem="wr1-eH-fuQ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="0n0-xd-sQU"/>
+                <constraint firstItem="5Jm-M0-O5a" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5FV-0A-PjE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pq9-zn-slE" secondAttribute="trailing" constant="20" id="9t4-vy-pbc"/>
+                <constraint firstItem="uii-wK-8no" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DlV-gJ-fbO"/>
+                <constraint firstItem="hly-lF-ekN" firstAttribute="top" secondItem="pq9-zn-slE" secondAttribute="bottom" constant="10" id="Ed7-ZS-fhz"/>
+                <constraint firstItem="hly-lF-ekN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="FnL-C6-9GR"/>
+                <constraint firstItem="wr1-eH-fuQ" firstAttribute="top" secondItem="uii-wK-8no" secondAttribute="bottom" constant="16" id="JUb-uA-mn4"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="hly-lF-ekN" secondAttribute="bottom" constant="-34" id="SWk-2U-ahS"/>
+                <constraint firstItem="5Jm-M0-O5a" firstAttribute="top" secondItem="wr1-eH-fuQ" secondAttribute="bottom" constant="16" id="bwt-m7-Ajc"/>
+                <constraint firstItem="zsv-Jr-RjL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="cYU-L6-QPP"/>
+                <constraint firstItem="uii-wK-8no" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="27" id="eUc-qN-QNk"/>
+                <constraint firstItem="pq9-zn-slE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="faR-BQ-z3I"/>
+                <constraint firstItem="pq9-zn-slE" firstAttribute="top" secondItem="5Jm-M0-O5a" secondAttribute="bottom" constant="16" id="ffw-xJ-dqU"/>
+                <constraint firstItem="4qd-3L-w02" firstAttribute="centerY" secondItem="hly-lF-ekN" secondAttribute="centerY" constant="20.5" id="g1F-Cv-AUl"/>
+                <constraint firstItem="hly-lF-ekN" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="nuB-Jl-sUn"/>
+                <constraint firstItem="zsv-Jr-RjL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="27" id="u8r-PN-8hz"/>
+                <constraint firstItem="4qd-3L-w02" firstAttribute="centerX" secondItem="hly-lF-ekN" secondAttribute="centerX" constant="16.5" id="xKd-3a-YFP"/>
+            </constraints>
+            <point key="canvasLocation" x="82.608695652173921" y="54.910714285714285"/>
         </view>
     </objects>
+    <resources>
+        <image name="exite" width="100" height="100"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="appBGColor">
+            <color red="0.87450980392156863" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="appMainFountColor">
+            <color red="0.13333333333333333" green="0.18431372549019609" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
